fixed overflow of one element in mobile viewing

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,6 +4,11 @@
   padding: 0;
 }
 
+body,
+html {
+  overflow-x: hidden;
+}
+
 body {
   font-family: "Quicksand", sans-serif;
 }
